fix box overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -632,7 +632,6 @@ body#index {
 		}
 		a:hover {
 			color:#f00;
-			background-color:#000;
 		}
 		.vision {background-image:url("http://freecooperunion.org/disorientation/img/lowdown-menu/vision.png")}
 		.direct-action-and-free-cooper-union {background-image:url("http://freecooperunion.org/disorientation/img/lowdown-menu/direct-action-and-free-cooper-union.png")}
